--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
            <h1 id="port_h1">Portfolio</h1>
            <div id="photo_container_min">
                 <div class="box">
-                    <img class="photo_portoflio" src="img/PANORAMA/Monika%20i%20Tomek%20cz-b-16.jpg">
+                    <img class="photo_portoflio" src="Monika%20i%20Tomek%20cz-b-16.jpg">
                 </div>
                 <div class="box">
-                    <img class="photo_portoflio" src="img/PANORAMA/a-91.jpg">
+                    <img class="photo_portoflio" src="a-91.jpg">
                 </div>
                 <div class="box">
-                    <img class="photo_portoflio" src="img/PANORAMA/a_d-1036.jpg">
+                    <img class="photo_portoflio" src="a_d-1036.jpg">
                 </div>
             </div>
             <div class="say_all_portfolio">
@@ -57,10 +57,10 @@
         <h1 id="text_pop">Popularne usługi</h1>
          <div id="pop_table">
            <div id="image">
-                  <img id="image__img" src="img/PANORAMA/slub_pom.jpg">
+                  <img id="image__img" src="slub_pom.jpg">
                 <div class="container_div">
                     <button class="button_pop">
-                       <img id="image__img2" src="img/PANORAMA/slub_pom.jpg">
+                       <img id="image__img2" src="slub_pom.jpg">
                    </button>
                 </div>
                 <div class="image__overlay">
@@ -69,10 +69,10 @@
            </div>
            <div id="min_pop_table">
                 <div id="zdjecie_pierwsze_prawo">
-                      <img class="zdjecie_img1" src="img/PANORAMA/a-188.jpg">
+                      <img class="zdjecie_img1" src="a-188.jpg">
                     <div class="guzik_mobile1">
                         <button class="button_mobile1">
-                           <img class="zdj_mobile1" src="img/PANORAMA/a-188.jpg">
+                           <img class="zdj_mobile1" src="a-188.jpg">
                        </button>
                     </div>
                     <div class="img_overlay2">
@@ -80,10 +80,10 @@
                     </div>
                </div>
                <div id="zdjecie_drugie_prawo">
-                      <img class="zdjecie_img1" src="img/PANORAMA/camera2.jpg">
+                      <img class="zdjecie_img1" src="camera2.jpg">
                     <div class="guzik_mobile1">
                         <button class="button_mobile2">
-                           <img class="zdj_mobile1" src="img/PANORAMA/camera2.jpg">
+                           <img class="zdj_mobile1" src="camera2.jpg">
                        </button>
                     </div>
                     <div class="img_overlay3">
@@ -119,10 +119,10 @@
             </div>
             <div id="social_media_footer_container">
                <a href="https://www.facebook.com/StudioLukasiak" target="_blank">
-                    <img class="social_media_footer" src="img/ikony/facebookwhite.png">
+                    <img class="social_media_footer" src="facebookwhite.png">
                </a>
                <a href="https://www.instagram.com/studiolukasiak/" target="_blank">
-                    <img class="social_media_footer" src="img/ikony/instagramwhite.png">
+                    <img class="social_media_footer" src="instagramwhite.png">
                </a>
             </div>
     </footer>
