--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Studio Łukasiak</title><link rel="icon" href="img/relicon.png" />
+    <title>Studio Łukasiak</title><link rel="icon" href="relicon.png" />
     <meta name="keywords" content="Fotografia Czarnków Trzcianka Imprezy Masowe Photo Fotobudka Fotooferta Zdjęcia 18stki" />
     <meta name="description" content="" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+   <header>
     <nav class="navbar">
         <div class="brand-title">Studio Łukasiak</div>
         <a href="#" class="toggle-button">
@@ -19,13 +20,14 @@
         </a>
         <div class="navbar-links">
           <ul>
-            <li><a href="#">Oferta</a></li>
-            <li><a href="#">Portfilio</a></li>
-            <li><a href="#">Kontakt</a></li>
-            <li><a href="#">O nas</a></li>
+            <li><a href="oferta.html">Oferta</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+            <li><a href="#o_mnie">O mnie</a></li>
           </ul>
         </div>
       </nav>
+    </header>
     <section id="homepage">
         <div id="hp_container">
             <img src="logo.png" id="logo_hp">
@@ -38,17 +40,17 @@
            <h1 id="port_h1">Portfolio</h1>
            <div id="photo_container_min">
                 <div class="box">
-                    <img class="photo_portoflio" src="Monika%20i%20Tomek%20cz-b-16.jpg">
+                    <img class="photo_portoflio" src="img/PANORAMA/Monika%20i%20Tomek%20cz-b-16.jpg">
                 </div>
                 <div class="box">
-                    <img class="photo_portoflio" src="a-91.jpg">
+                    <img class="photo_portoflio" src="img/PANORAMA/a-91.jpg">
                 </div>
                 <div class="box">
-                    <img class="photo_portoflio" src="a_d-1036.jpg">
+                    <img class="photo_portoflio" src="img/PANORAMA/a_d-1036.jpg">
                 </div>
             </div>
             <div class="say_all_portfolio">
-                <a href="#">Zobacz więcej</a>
+                <a href="portfolio.html">Zobacz więcej</a>
             </div>
         </div>
         
@@ -57,10 +59,10 @@
         <h1 id="text_pop">Popularne usługi</h1>
          <div id="pop_table">
            <div id="image">
-                  <img id="image__img" src="slub_pom.jpg">
+                  <img id="image__img" src="img/PANORAMA/slub_pom.jpg">
                 <div class="container_div">
                     <button class="button_pop">
-                       <img id="image__img2" src="slub_pom.jpg">
+                       <img id="image__img2" src="img/PANORAMA/slub_pom.jpg">
                    </button>
                 </div>
                 <div class="image__overlay">
@@ -69,10 +71,10 @@
            </div>
            <div id="min_pop_table">
                 <div id="zdjecie_pierwsze_prawo">
-                      <img class="zdjecie_img1" src="a-188.jpg">
+                      <img class="zdjecie_img1" src="img/PANORAMA/a-188.jpg">
                     <div class="guzik_mobile1">
                         <button class="button_mobile1">
-                           <img class="zdj_mobile1" src="a-188.jpg">
+                           <img class="zdj_mobile1" src="img/PANORAMA/a-188.jpg">
                        </button>
                     </div>
                     <div class="img_overlay2">
@@ -80,10 +82,10 @@
                     </div>
                </div>
                <div id="zdjecie_drugie_prawo">
-                      <img class="zdjecie_img1" src="camera2.jpg">
+                      <img class="zdjecie_img1" src="img/PANORAMA/camera2.jpg">
                     <div class="guzik_mobile1">
                         <button class="button_mobile2">
-                           <img class="zdj_mobile1" src="camera2.jpg">
+                           <img class="zdj_mobile1" src="img/PANORAMA/camera2.jpg">
                        </button>
                     </div>
                     <div class="img_overlay3">
@@ -108,21 +110,24 @@
     </section>
     <footer>
             <ul>
-                <li class="footer_menu"><a href="#">Oferta</a></li>
-                <li class="footer_menu"><a href="#">O nas</a></li>
-                <li class="footer_menu"><a href="#">Portfolio</a></li>
-                <li class="footer_menu"><a href="#">Kontakt</a></li>
+                <li class="footer_menu"><a href="oferta.html">Oferta</a></li>
+                <li class="footer_menu"><a href="#o_mnie">O mnie</a></li>
+                <li class="footer_menu"><a href="portfolio.html">Portfolio</a></li>
+                <li class="footer_menu"><a href="kontakt.html">Kontakt</a></li>
+                <li class="footer_menu"><a href="index.html">Strona Główna</a></li>
                 <li class="footer_menu"><a href="https://www.instagram.com/on.develop" target="_blank">Twórca strony</a></li>
             </ul>
-            <div id="logo_footer">
+            <div id="logo_footer_div">
+               <a href="index.html" id="logo_footer">
                 <img src="logo.png">
+               </a>
             </div>
             <div id="social_media_footer_container">
                <a href="https://www.facebook.com/StudioLukasiak" target="_blank">
-                    <img class="social_media_footer" src="facebookwhite.png">
+                    <img class="social_media_footer" src="img/ikony/facebookwhite.png">
                </a>
                <a href="https://www.instagram.com/studiolukasiak/" target="_blank">
-                    <img class="social_media_footer" src="instagramwhite.png">
+                    <img class="social_media_footer" src="img/ikony/instagramwhite.png">
                </a>
             </div>
     </footer>
